added docker file and update authentication
